--- a/src/hub/ui/tsconfig.json
+++ b/src/hub/ui/tsconfig.json
@@ -16,9 +16,7 @@
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true,
     "baseUrl": ".",
-    "paths": {
-      "@/*": ["./src/*"]
-    }
+    "paths": { "@/*": ["./src/*"], "@hub/*": ["../*"] }
   },
   "include": ["src"],
   "references": [{ "path": "./tsconfig.node.json" }]
